release-note/1.6.2-beta1/nl_NL.md
## [1.6.2-beta1]

### Security
- Er is dringend een beveiligingsprobleem met een hoog risico in de accountbeheermodule opgelost, waardoor de veiligheid van beheerdersactiviteiten verder is verbeterd
- Er is dringend een beveiligingsprobleem met een hoog risico in de bestandsservice opgelost, waardoor de veiligheid van bestandstoegang en -bewerkingen is verbeterd

### New
- Donkere modus toegevoegd voor de Bestanden-app
- Ondersteuning voor Alibaba Cloud Drive-integratie toegevoegd
- Linux-kernel bijgewerkt naar 6.18.9
- Stuurprogrammaondersteuning toegevoegd voor NVIDIA 470 / 580 / Open Kernel Module, Intel Xe / Battlemage, Realtek RTW88 / RTL8127, Intel / MediaTek / AIC8800 draadloze apparaten en Cirrus Logic-audioapparaten, en een NVIDIA-stuurprogramma voor automatische detectie en aanpassingsmechanisme toegevoegd dat automatisch overeenkomt met de juiste stuurprogrammaversie op basis van de hardware

### Fixed
- Een oplossing gevonden voor het verlopen van de OneDrive-sleutel die verbindingsproblemen veroorzaakte, de beschikbaarheid van basisintegratie herstelde en het mechanisme voor sleutelupdates optimaliseerde
- Er is een probleem opgelost waarbij de Collabora Server-app back-ups blokkeerde, zodat back-uptaken correct konden worden uitgevoerd
- Er is een probleem opgelost waarbij meerdere USB-opslagapparaten bij het opstarten aan hetzelfde koppelpunt konden worden toegewezen
- Er is een probleem opgelost waarbij verouderde '-apparaatnaam'-achtervoegsels werden gegenereerd wanneer USB-aankoppelpunten conflicteerden
- Er is een probleem opgelost waarbij opslag gemaakt vanaf een schijf met één partitie niet de door de gebruiker opgegeven naam als koppelpunt gebruikte
- Vaste RAID-degradatie na opnieuw opstarten wanneer een RAID-array werd gemaakt van schijven met hetzelfde serienummer
- Fout-positieven opgelost bij RAID-opstartcontroles veroorzaakt door inconsistente runtime-apparaatnaamformaten

### Optimized
- Geoptimaliseerde workflows voor bestandsbewerking met hoge frequentie, zoals importeren, migreren, versleutelen, kopiëren en knippen
- Geoptimaliseerde weergave van de uploadstatus van de clouddrive, waardoor het voor gebruikers duidelijker wordt om de huidige voortgang, voltooiingsstatus en foutredenen te begrijpen

### Tips
- Als je softwareproblemen tegenkomt, word dan gerust lid van onze Discord-community om contact te maken en ondersteuning te krijgen van meer dan 43.000 Zima-leden!
- <a href="https://zimaboard.com/discord" target="_blank" style="color:blue">https://zimaboard.com/discord</a>
