release-note/1.6.2-beta3/nl_NL.md
## [1.6.2-beta3]

### Fixed
- Er is een probleem opgelost waarbij de mediamap niet toegankelijk was
- Er is een probleem opgelost waarbij app-migratie niet correct kon worden uitgevoerd
- Er is een probleem opgelost waarbij casaos-every-boot een fout rapporteerde bij het opstarten
- Er is een probleem opgelost waarbij Zima niet toegankelijk was via de lokale domeinnaam

### Security
- Er is een beveiligingsprobleem met een hoog risico in de berichtenservice opgelost, waardoor de beveiliging van de systeemcommunicatie is verbeterd

## [1.6.2-beta2]

### Fixed
- Er is een probleem opgelost waarbij bepaalde systeemmappen ten onrechte werden geïdentificeerd als ongeldige paden

### Optimized
- Het initialisatieconfiguratieproces van de clouddrive geoptimaliseerd in specifieke scenario's, waarbij problemen met het laden van bestanden veroorzaakt door trage initialisatie zijn opgelost

## [1.6.2-beta1]

### Security
- Er is dringend een beveiligingsprobleem met een hoog risico in de accountbeheermodule opgelost, waardoor de veiligheid van beheerdersactiviteiten verder is verbeterd
- Er is dringend een beveiligingsprobleem met een hoog risico in de bestandsservice opgelost, waardoor de veiligheid van bestandstoegang en -bewerkingen is verbeterd

### New
- Donkere modus toegevoegd voor de Bestanden-app
- Ondersteuning voor Alibaba Cloud Drive-integratie toegevoegd
- Linux-kernel bijgewerkt naar 6.18.9
- Stuurprogrammaondersteuning toegevoegd voor NVIDIA 470 / 580 / Open Kernel Module, Intel Xe / Battlemage, Realtek RTW88 / RTL8127, Intel / MediaTek / AIC8800 draadloze apparaten en Cirrus Logic-audioapparaten, en een NVIDIA-stuurprogramma voor automatische detectie en aanpassingsmechanisme toegevoegd dat automatisch overeenkomt met de juiste stuurprogrammaversie op basis van de hardware

### Fixed
- Een probleem opgelost waarbij het verlopen van de OneDrive-sleutel verbindingsproblemen veroorzaakte, de beschikbaarheid van basisintegratie werd hersteld en het sleutelupdatemechanisme werd geoptimaliseerd
- Er is een probleem opgelost waarbij de Collabora Server-app back-ups blokkeerde, zodat back-uptaken correct konden worden uitgevoerd
- Er is een probleem opgelost waarbij meerdere USB-opslagapparaten bij het opstarten aan hetzelfde koppelpunt konden worden toegewezen
- Er is een probleem opgelost waarbij verouderde '-apparaatnaam'-achtervoegsels werden gegenereerd wanneer USB-aankoppelpunten conflicteerden
- Er is een probleem opgelost waarbij opslag gemaakt vanaf een schijf met één partitie niet de door de gebruiker opgegeven naam als koppelpunt gebruikte
- Vaste RAID-degradatie na opnieuw opstarten wanneer een RAID-array werd gemaakt van schijven met hetzelfde serienummer
- Fout-positieven opgelost bij RAID-opstartcontroles veroorzaakt door inconsistente runtime-apparaatnaamformaten

### Optimized
- Geoptimaliseerde workflows voor bestandsbewerking met hoge frequentie, zoals importeren, migreren, versleutelen, kopiëren en knippen
- Geoptimaliseerde weergave van de uploadstatus van de clouddrive, waardoor het voor gebruikers duidelijker wordt om de huidige voortgang, voltooiingsstatus en foutredenen te begrijpen

### Tips
- Als je softwareproblemen tegenkomt, word dan gerust lid van onze Discord-community om contact te maken en ondersteuning te krijgen van meer dan 43.000 Zima-leden!
- <a href="https://zimaboard.com/discord" target="_blank" style="color:blue">https://zimaboard.com/discord</a>
